# grindmo

aoc_2025/: Cargo.toml  setup_day.sh
aoc_2025/src/day_1/: 1.rs
aoc_2025/src/day_2/: 2.rs
aoc_2025/src/day_3/: 3.rs
aoc_2025/src/day_4/: 4.rs
aoc_2025/src/day_5/: 5.rs
aoc_2025/src/day_6/: 6.rs
aoc_2025/src/day_7/: 7.rs
aoc_2025/src/day_8/: 8.rs
aoc_2025/src/day_9/: 9.rs
