[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "day_1"
path = "src/day_1/1.rs"

[[bin]]
name = "day_2"
path = "src/day_2/2.rs"

[[bin]]
name = "day_3"
path = "src/day_3/3.rs"

[[bin]]
name = "day_4"
path = "src/day_4/4.rs"

[[bin]]
name = "day_5"
path = "src/day_5/5.rs"

[[bin]]
name = "day_6"
path = "src/day_6/6.rs"

[dependencies]
